--- a/.github/workflows/python-ubuntu.yml
+++ b/.github/workflows/python-ubuntu.yml
@@ -4,9 +4,10 @@ on: [push]
 
 jobs:
   build:
-    runs-on: [ubuntu-latest, macos-latest, windows-latest]
+    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
+        os: [ubuntu-latest, windows-latest]
         python-version: ["3.7", "3.8", "3.9", "3.10", "3.11"]
     steps:
       - uses: actions/checkout@v3
@@ -14,12 +15,7 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Install poetry
-        uses: snok/install-poetry@v1
-        with:
-          version: 1.1.11
-          virtualenvs-in-project: true
       - name: Install pytest
-        run: poetry install pytest
+        run: pip install pytest
       - name: Test
         run: python -m pytest teste.py
